# F4SEMods

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clean-copy.sh  deploy-project.mjs  pack-project.sh  task-gen.mjs  vcpkg.json
ConsoleHistory/: README.md
ConsoleHistory/include/: console.hpp  constants.hpp  project.hpp
Interface/: Background.as  TextInputMenu.as
Interface/Shared/: IMenu.as
Interface/Shared/AS3/: BSButtonHint.as  BSButtonHintBar.as
Interface/Shared/Fonts/fonts_console.fla/: DOMDocument.xml  PublishSettings.xml
Interface/TextInputMenu/: DOMDocument.xml  PublishSettings.xml
Projects/ConsoleHistory/MCM/Config/ConsoleHistory/: settings.ini
Projects/ConsoleHistory/include/: console.hpp
Projects/PapyrusLib/Scripts/Source/User/: PapyrusLib.psc
Projects/PapyrusLib/include/: project-main.hpp
Projects/RotatingSaves/MCM/Config/RotatingSaves/: config.json  keybinds.json  settings.ini
Projects/RotatingSaves/Scripts/Source/User/: RotatingSaves.psc
Projects/RotatingSaves/include/: project-main.hpp
SaveUtil/: README.md
SaveUtil/include/: project.hpp
cmake/: project.h.in  version.rc.in
include/: backports.hpp  events.hpp  internal.hpp  load-handler.hpp  load-order.hpp  menu-base.hpp  menu-text-input.hpp  menu-util.hpp  menus.hpp  papyrus.hpp  pch.h  pch.hpp  save_backport.hpp  util.hpp
src/: main.cpp
